# RHICf-library

./: .gitignore  README.md
MCconvertor/: CMakeLists.txt  Makefile  README  cmake_install.cmake  convertor.cc  convertor2.cc  convertor2file.cc  convertor_20190621_org.cc  convertor_20190621_org2.cc  convertor_withBBC_20190519.cc
MCconvertor/complete_conv/: convertor_qgs_tl.sh  convertor_qgs_top.sh  convertor_qgs_ts.csh  convertor_qgs_ts.sh_log  convertor_qgs_ts_20190228.sh  qgs_ts_20180304.csh
MCconvertor/include/: RHICfFlag.h
MCconvertor/lhcflib/: Makefile  libLHCfEvent_rdict.pcm  test.root
MCconvertor/lhcflib/.svn/: entries
MCconvertor/lhcflib/include/: A1Cal1.h  A1CalEventHist.h  A1Rec1.h  A2Cal2.h  A2Phys.h-org  A2PhysAccumHist.h  GParamD64.h  SPSAdamo.h  SimIncidents.h  feparam_arm2.h  libLHCfEvent.h
MCconvertor/lhcflib/include/.svn/: entries
MCconvertor/lhcflib/include/.svn/text-base/: A1Cal2.h.svn-base  A1Phys.h.svn-base  A1Rec2.h.svn-base  A2Info.h.svn-base  SPSAdamoRec0.h.svn-base  SimP.h.svn-base
MCconvertor/lhcflib/src/: A1Cal1.cpp  A1Cal2AccumHist.cpp  A2Cal2.cpp  A2PhysAccumHist.cpp  A2Scl_pp2015.cpp  LHCfEvent.cpp  Rec0.cpp  SPSAdamo.cpp  SPSAdamoRec0.cpp  SimP.cpp  libLHCfEvent.cpp
MCconvertor/lhcflib/src/.svn/: dir-prop-base  entries
MCconvertor/lhcflib/src/.svn/text-base/: A1Phys.cpp.svn-base  A1Scl_pp2015.cpp.svn-base  A2Phys.cpp-org.svn-base  A2Raw_pPb2016.cpp.svn-base  A2Rec1.cpp.svn-base  A2Rec3.cpp.svn-base  A2Scl.cpp.svn-base  GParam.cpp.svn-base  GParamD64.cpp.svn-base  RHICfScl_Op2017.cpp.svn-base  SclL1T.cpp.svn-base
MCconvertor/old/: checker-1.cc  checker.cc  checker2.cc  cmake.sh  convertor.sh  merger.cc  merger2.cc  nstatistics.cc  nstatistics2.cc  nstatisticsMT.cc  nstatisticsg.cc  qgs_top_20180405.csh  qgs_ts_20180304.csh  sumDEFromraw.cc  sumdevsE.cc
MCconvertor/old/build2/: CMakeCache.txt  Makefile  cmake_install.cmake
MCconvertor/old/build_20190628/: CMakeCache.txt  convert_adhoc_photon_out_short_QGS005019.root  convertor  loop.C  test.root
MCconvertor/old/build_20190709/: (null)  loop.C
MCconvertor/rhicflib/: CMakeCache.txt  CMakeLists.txt  LinkDef.h.origin  Makefile  cmake_install.cmake  libRHICfEvent_rdict.pcm
MCconvertor/rhicflib/include/: ParticlesInfo.h  ParticlesInfo.h.origin  RHICfFC.h  libRHICfEvent.h
MCconvertor/rhicflib/include/.svn/text-base/: A2CountArray.h.svn-base  A2PhysAccumHist.h-org.svn-base  A2Raw.h.svn-base  A2Raw_pp2015.h.svn-base  A2Rec1.h.svn-base  SPSAdamoHist.h.svn-base  feparam_arm1.h.svn-base
MCconvertor/rhicflib/lib/: MyClass.h  test.root
MCconvertor/rhicflib/lib/.svn/: entries
MCconvertor/rhicflib/src/: ParticlesInfo.cpp  ParticlesInfo.cpp.origin  RHICfBBC.cpp  RHICfFC.cpp  libRHICfEvent.cpp
MCconvertor/rhicflib/src/.svn/text-base/: A1Scl.cpp.svn-base  A2PhysAccumHist.cpp-org.svn-base  A2Rec2.cpp.svn-base  SimIncidents.cpp.svn-base
MCconvertor/src/: RHICfFlag.cpp  RHICfFlag.cpp_tmp
MCconvertor/suzukilib/: BBC.cpp  BBC.hpp  BBCContainer.hpp  Forward.cpp  Forward.hpp  ForwardContainer.hpp  LinkDef.h  MCDataContainer.cpp  MCDataContainer.hpp  Makefile  RHICfParam.hpp  RHICfSimEvent.cpp  RHICfSimEvent.hpp  RecoDataContainer.cpp  RecoDataContainer.hpp  Reconstruct.cpp  Reconstruct.hpp  ReconstructContainer.cpp  ReconstructContainer.hpp  dict.cc  dict.h  dict_rdict.pcm
Reconstruction/: Makefile  reconstruction02.csh  reconstruction02_2798.csh  reconstruction02_debug.csh
Reconstruction/.svn/: wc.db
Reconstruction/include/: .A1Reconstruction.h.swp  A1Calibration.h  A1Reconstruction.h  Delaypede.h  GSObarPosCalc.h  GSObarPosCalc_minho.h  McPedestal.h  ReadDAQLog.h  ReadRunData.h  ScintiPosDepGSO.h
Reconstruction/job_control/: README  loop_ver2.sh  loop_ver2_runloop.sh  loop_ver2_runloop_2798.sh  qsub_rec1.sh
Reconstruction/old/: reconstruction02.csh  reconstruction02_2798.csh  reconstruction02_loop.csh  reconstruction02_org.cpp
Reconstruction/rec_csh/: reconstruction02_loop_2625.sh  reconstruction02_loop_2627.sh  reconstruction02_loop_2630.sh  reconstruction02_loop_2631.sh  reconstruction02_loop_2632.sh  reconstruction02_loop_2633.sh  reconstruction02_loop_2634.sh  reconstruction02_loop_2636.sh  reconstruction02_loop_2637.sh  reconstruction02_loop_2641.sh  reconstruction02_loop_2644.sh  reconstruction02_loop_2718.sh  reconstruction02_loop_2721.sh  reconstruction02_loop_2726.sh  reconstruction02_loop_2730.sh  reconstruction02_loop_2732.sh  reconstruction02_loop_2734.sh  reconstruction02_loop_2736.sh  reconstruction02_loop_2738.sh  reconstruction02_loop_2740.sh  reconstruction02_loop_2798.sh  reconstruction02_loop_2801.sh  reconstruction02_loop_2803.sh  reconstruction02_loop_2810.sh  reconstruction02_loop_2812.sh  reconstruction02_loop_2814.sh  reconstruction02_loop_2818.sh  reconstruction02_loop_2819.sh  reconstruction02_loop_2823.sh  reconstruction02_loop_2824.sh  reconstruction02_loop_2827.sh  reconstruction02_loop_2845.sh  (+42 more)
doc/: worklog_v2.1.md  worklog_v2.2.md
general/: README  sc
general/.svn/: wc.db
(+3209 files in other folders)
